--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ textarea:focus, input, input[type]:focus {
 @media only screen and (max-width: 1000px){
 
 	.menu{
-		font-size: 9px;
+		font-size: 15px;
 		color: rgb(30, 59, 113);
 		margin: 15px;
 		padding: 5px;
@@ -163,6 +163,7 @@ textarea:focus, input, input[type]:focus {
 		width: 100%;
 	}
 
+	
 
 	.apartado{
 	width: 100%;
@@ -175,11 +176,25 @@ textarea:focus, input, input[type]:focus {
 	display: list-item;
 	}
 
+	.subtitulo-1, .subtitulo-2{
+		font-size: 40px;
+	}
 	.subtitulo-2{
 		background-color: #8dabc2;
 		color: white;
-		height: 30px;
+		height: 40px;
 		width: 100%;	
+	}
+	.t-1{
+		font-size: 30px;
+		margin: 5px;
+		padding-top: 5px;
+	}
+	
+	.t-2{
+		font-size: 20px;
+		color: rgb(159,156,153);
+		margin: 5px;
 	}
 	.flex{
 	display: flex;
@@ -187,10 +202,19 @@ textarea:focus, input, input[type]:focus {
 	justify-content: center;
 	}
 
+	input{
+		border-radius: 5px;
+		text-align: center;
+		font-size: 30px;
+		margin: 10px;
+		width: 100%;
+		height: 50px;
+	}
+
 	.btn{
 		color: white;
-		font-size: 14px;
-		height: 30px;
+		font-size: 30px;
+		height: 50px;
 		width: 100%;
 		border-radius: 5px;
 		margin-top: 10px;
@@ -198,5 +222,10 @@ textarea:focus, input, input[type]:focus {
 		justify-content: center;
 	}
 	
+	footer{
+		color: rgb(236, 181, 14);
+		padding: 20px;
+		font-size: 20px;
+	}
 
 }
